tests/pass/test_generic_fn_basic.tk
fn id<T>(x: T) -> T {
    return x;
}

fn add<T>(x: T, y: T) -> T {
    return x + y;
}

fn main() -> i32 {
    auto i = id<i32>(10);
    if (i != 10) return 1;

    auto f = id<f64>(3.14);
    if (f < 3.13 || f > 3.15) return 2;

    auto sum = add<i32>(10, 20);
    if (sum != 30) return 3;

    return 0;
}
