tests/fail/unset_error.tk

pub fn main() -> void {
    auto x#: i32 = unset;
    // EXPECT: E0410
    auto y = x; 
}
